infra/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: headscale
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: stun
      port: 3478
      protocol: UDP
